fixing category spacing8

--- a/src/index.css
+++ b/src/index.css
@@ -698,11 +698,24 @@ textarea:focus {
   align-items: center;
 }
 
+.swiper-wrapper {
+  height: 29rem;
+}
+
 .swiper-slide img {
   display: block;
   width: 100%;
   height: 100%;
   object-fit: cover;
+}
+
+.swiper-horizontal > .swiper-pagination-bullets,
+.swiper-pagination-bullets.swiper-pagination-horizontal,
+.swiper-pagination-custom,
+.swiper-pagination-fraction {
+  bottom: 5px;
+  left: 0;
+  width: 100%;
 }
 
 .maylike-swipe {
